# sed-manager-rs

./: .gitignore  .licensesnip  Cargo.toml  LICENSE.md  README.md  licensesnip.config.jsonc  rustfmt.toml
sed_manager/: Cargo.toml  build.rs
sed_manager/src/: async_finalize.rs  call_with_tuple.rs  lib.rs  variadics.rs  with_copy.rs
sed_manager/src/applications/: activate_locking.rs  change_password.rs  error.rs  mbr_edit_session.rs  mod.rs  permission_session.rs  range_edit_session.rs  revert.rs  take_ownership.rs  test_fixtures.rs  user_edit_session.rs  utility.rs  with_session.rs
sed_manager/src/device/: device.rs  error.rs  mod.rs  nvme.rs
sed_manager/src/fake_device/: com_id_session.rs  control_session.rs  controller.rs  device.rs  discovery.rs  dispatch.rs  firmware.rs  mod.rs  packet_stack.rs  protocol_stack.rs  route.rs  security_provider.rs  security_provider_session.rs  session.rs  sp_session.rs  sp_session_dispatcher.rs  state.rs  tper.rs  transient.rs
sed_manager/src/messaging/: com_id.rs  discovery.rs  fmt.rs  impl_ser_bin.rs  impl_ser_token.rs  mod.rs  packet.rs  packets.rs  table_mask.rs  token.rs  tokenization.rs  uid.rs  uid_range.rs  value.rs
sed_manager/src/rpc/: args.rs  engine.rs  error.rs  message.rs  method.rs  mod.rs  pipeline.rs  properties.rs  test_utils.rs
sed_manager/src/serialization/: binary_impl.rs  binary_serialization.rs  error.rs  field.rs  fields.rs  impl_ser_bin.rs  impls.rs  item_with_len.rs  mod.rs  serialize.rs  serializer.rs  stream.rs  vec_with_len.rs  vec_without_len.rs  with_len.rs  without_len.rs
sed_manager/src/spec/: generated.rs  lookup.rs  mod.rs  spec.json
sed_manager/src/specification/: generated.rs  invoker.rs  lookup.rs  methods.rs  mod.rs  opal.rs  sp.rs  specification.json  tables.rs
sed_manager/src/sync/: exchange.rs  fence.rs  mod.rs
sed_manager/src/tper/: com_session.rs  control_session.rs  error.rs  mod.rs  session.rs  sp_session.rs  tper.rs
sed_manager/tests/: test.rs  test_serialization.rs
sed_manager/tests/fake_device/: control_session.rs  discovery.rs  mod.rs
sed_manager/tests/serialization/: derive_macros.rs  mod.rs
sed_manager/tests/tper/: control_session.rs  discovery.rs  handle_com_id.rs  mod.rs  sp_session.rs  stack.rs
sed_manager/tests/types/: derive_macros.rs
sed_manager_config/: Cargo.toml
sed_manager_config/src/: backend.rs  device_list.rs  frontend.rs  license.rs  logging.rs  main.rs  settings.rs  ui.rs
sed_manager_config/src/algorithm/: digital_unit.rs  mod.rs
sed_manager_config/src/configuration/: change_password.rs  mbr_editor.rs  mod.rs  permissions.rs  range_editor.rs  single_step.rs  user_editor.rs
sed_manager_config/src/troubleshooting/: mod.rs
sed_manager_config/src/utility/: mod.rs  peek_cell.rs  run_in_thread.rs  vec_model.rs
sed_manager_config_ui/: Cargo.toml  build.rs
sed_manager_config_ui/src/: lib.rs
sed_manager_config_ui/src/algorithm/: digital_unit.rs  mod.rs
sed_manager_config_ui/src/data/: activity_support.rs  device_description.rs  device_discovery_feature.rs  extended_status.rs  locking_range.rs  mod.rs  name_value_pair.rs  state.rs  unavailable_device.rs
sed_manager_config_ui/ui/: app_window.slint  icons.slint  state.slint
sed_manager_config_ui/ui/algorithm/: digital_unit.slint
sed_manager_config_ui/ui/configure/: activate_locking.slint  change_password.slint  config_view.slint  login_view.slint  mbr_editor.slint  permission_editor.slint  range_editor.slint  revert.slint  take_owneship.slint  user_editor.slint
sed_manager_config_ui/ui/data/: activity.slint  device_description.slint  locking_range.slint  mbr_control.slint  name_value_pair.slint  range_access.slint  status.slint  theme.slint  types.slint  unavailable_device.slint  user.slint
sed_manager_config_ui/ui/info/: description.slint
sed_manager_config_ui/ui/pages/: device_page.slint  unavailable_devices_page.slint
sed_manager_config_ui/ui/settings/: license_popup.slint
sed_manager_config_ui/ui/troubleshoot/: stack-reset.slint
sed_manager_config_ui/ui/widgets/: alternative_layout.slint  collapsible.slint  disk_space.slint  icon_button.slint  navigation_button.slint  pair_list.slint  password.slint  progress.slint  prototype_popup.slint  result_popup.slint  status-overlay.slint  tab_bar.slint  table.slint  toast_message.slint  visual.slint  warning_popup.slint
sed_manager_gui/: Cargo.toml  build.rs
sed_manager_gui/src/: app_state.rs  async_state.rs  atomic_borrow.rs  backend.rs  callbacks.rs  device_list.rs  discovery.rs  main.rs  native_data.rs  state_ext.rs  tmp.rs  ui.rs  zzz_app_state.rs
sed_manager_gui/src/configuration/: mbr_editor.rs  mod.rs  permissions.rs  range_editor.rs  single_step.rs  user_editor.rs
sed_manager_gui/src/data/: action_result.rs  device_description.rs  device_discovery_feature.rs  locking_range.rs  mod.rs  name_value_pair.rs  unavailable_device.rs
sed_manager_gui/src/models/: additional_drives_model.rs  feature_model.rs  mod.rs  summary_model.rs
sed_manager_gui/src/troubleshooting/: mod.rs
sed_manager_gui/src/utility/: atomic_borrow.rs  mod.rs  peek_cell.rs  run_in_thread.rs  versioned.rs
sed_manager_gui/ui/: app_window.slint  device_card.slint  device_model.slint  device_tab_widget.slint  interface.slint  main_window.slint  ssc.slint
sed_manager_gui/ui/data/: locking_range.slint  name_value_pair.slint
sed_manager_gui/ui/pages/: additional_drives_page.slint  device_page.slint  main_page.slint  summary_page.slint  unavailable_devices_page.slint
sed_manager_gui/ui/views/: action_view.slint  activate_locking_view.slint  configure_ranges_view.slint  content_state.slint  device_description_view.slint  feature_view.slint  revert_view.slint  take_owneship_view.slint
sed_manager_gui/ui/widgets/: collapsible_view.slint  loading.slint  name_value_list_view.slint  switch_content.slint  (+4 more)
sed_manager_gui_elements/: Cargo.toml
sed_manager_gui_elements/src/: lib.rs
sed_manager_gui_elements/ui/: app_window.slint  icons.slint  state.slint
sed_manager_unlock/: Cargo.toml
sed_manager_unlock/src/: device_list.rs  error.rs  main.rs
(+320 files in other folders)
