[workspace]
resolver = "2"
members = [
    "sed_manager",
    "sed_manager_macros",
    "sed_manager_config",
    "sed_manager_config_ui",
    "sed_manager_unlock",
    "skip_test", "skip_test_macros",
    "as_array",
    "as_array_macros"
]


[patch.crates-io]
slint = { git = "https://github.com/petiaccja/slint.git", branch = "fix-compile-error-1.88" }
slint-build = { git = "https://github.com/petiaccja/slint.git", branch = "fix-compile-error-1.88" }