[package]
name = "sed-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
sed_manager_macros = { path = "../sed_manager_macros" }
skip_test = { path = "../skip_test" }
as_array = { path = "../as_array" }

[dependencies.bitvec]
version = "1"
default-features = false
features = ["alloc"]

[dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["std", "ioapiset", "errhandlingapi", "fileapi", "winnt", "handleapi", "winioctl", "wbemcli", "combaseapi", "oleauto", "winbase", "ntddscsi"]

[dependencies.thiserror]
version = "1.0.66"

[dependencies.tokio]
version = "1.41.0"
default-features = false
features = ["rt", "rt-multi-thread", "time", "sync", "macros"]

[dependencies.tokio-util]
version = "0.7.12"

[dependencies.async-trait]
version = "0.1.83"