[package]
name = "sed-manager"
version = "0.1.0"
edition = "2021"

[package.metadata]
build = "build.rs"

[dependencies]
sed-manager-macros = { path = "../sed_manager_macros" }
skip-test = { path = "../skip_test" }
as-array = { path = "../as_array" }

[dependencies.bitvec]
version = "1"
default-features = false
features = ["alloc"]

[dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["std", "ioapiset", "errhandlingapi", "fileapi", "winnt", "handleapi", "winioctl", "wbemcli", "combaseapi", "oleauto", "winbase", "ntddscsi"]

[dependencies.thiserror]
version = "1.0.66"

[dependencies.tokio]
version = "1.41.0"
default-features = false
features = ["rt", "sync", "rt-multi-thread", "time", "macros"]

[build-dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.89"
serde_json = "1.0.138"