[package]
name = "sed-manager-config"
version = "0.1.0"
edition = "2021"

[package.metadata]
build = "build.rs"

[dependencies]
sed-manager = { path = "../sed_manager" }
sed-manager-config-ui = { path = "../sed_manager_config_ui" }

[dependencies.slint]
version = "1.9.2"
default-features = false
features = ["std", "compat-1-2", "backend-winit", "renderer-skia", "renderer-femtovg"]

[dependencies.tokio]
version = "1.41.0"
default-features = false
features = ["sync", "fs", "io-util", "rt-multi-thread"]

[dependencies.tracing]
version = "0.1.41"

[dependencies.tracing-appender]
version = "0.2.3"

[dependencies.tracing-subscriber]
version = "0.3.19"

[dependencies.rfd]
version = "0.15.2"
features = ["xdg-portal"]

[build-dependencies]
slint-build = "1.9.2"