[package]
name = "sed-manager-config-ui"
version = "0.1.1"
edition = "2021"

[package.metadata]
build = "build.rs"

[dependencies]
sed-manager = { path = "../sed_manager" }

[dependencies.slint]
version = "1.12.0"
default-features = false
features = ["std", "compat-1-2"]

[build-dependencies]
slint-build = "1.12.0"