[package]
name = "sed-manager-gui-elements"
version = "0.1.0"
edition = "2021"

[package.metadata]
build = "build.rs"

[dependencies]
sed-manager = { path = "../sed_manager" }

[dependencies.slint]
version = "1.10.0"
default-features = false
features = ["std", "compat-1-2", "backend-winit", "renderer-skia", "renderer-femtovg"]

[build-dependencies]
slint-build = "1.10.0"